--- a/projects.html
+++ b/projects.html
@@ -180,6 +180,12 @@
                 <li><strong>Automated Document Management:</strong> Developed automated document management systems to improve efficiency and accuracy.</li>
                 <li><strong>Printmail Solutions:</strong> Streamlined printmail operations, reducing costs and improving turnaround times.</li>
             </ul>
+            <h3>Call Center Transformation</h3>
+            <ul>
+                <li><strong>AI-Driven Call Routing:</strong> Implemented AI-driven call routing to enhance customer service efficiency and satisfaction.</li>
+                <li><strong>Omni-Channel Integration:</strong> Developed omni-channel integration for seamless customer interactions across voice, chat, and email.</li>
+                <li><strong>Performance Analytics:</strong> Leveraged advanced analytics to monitor and improve call center performance metrics.</li>
+            </ul>
             <p>These projects involved making the products modular, integrating AI and ML, and updating them to the latest standards, significantly reducing technology debt and enhancing operational efficiency.</p>
         </section>
         <div class="internal-link">
