--- a/blog.html
+++ b/blog.html
@@ -50,9 +50,8 @@
         }
         header #branding {
             flex: 1;
-            text-align: center; /* Center-align the header content */
         }
-        header #branding h1, header #branding p {
+        header #branding h1 {
             margin: 0;
         }
         .section {
@@ -66,14 +65,20 @@
             text-align: center;
             padding: 10px 0;
         }
-        .back-to-top {
-            text-align: right;
-            margin-top: 20px;
+        .flex-container {
+            display: flex;
+            align-items: flex-start;
+            flex-wrap: wrap;
         }
-        .back-to-top a {
-            color: #333;
-            text-decoration: none;
-            font-size: 14px;
+        .flex-container img {
+            width: 150px;
+            height: auto;
+            border-radius: 50%;
+            margin-right: 20px;
+            flex-shrink: 0;
+        }
+        .flex-container div {
+            flex: 1;
         }
         @media (max-width: 768px) {
             .container {
@@ -91,14 +96,67 @@
                 padding: 10px 0;
                 border: none;
             }
+            .flex-container {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .flex-container img {
+                margin: 0 0 20px 0;
+            }
+        }
+        .back-to-top {
+            text-align: right;
+            margin-top: 20px;
+        }
+        .tab-container {
+            display: flex;
+            flex-wrap: wrap;
+            border-bottom: 1px solid #ddd;
+        }
+        .tab {
+            padding: 10px;
+            cursor: pointer;
+            border: 1px solid #ddd;
+            border-bottom: none;
+            background-color: #f4f4f4;
+            margin-right: 5px;
+        }
+        .tab-content {
+            display: none;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-top: none;
+        }
+        .tab-content.active {
+            display: block;
         }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var tabs = document.querySelectorAll(".tab");
+            var contents = document.querySelectorAll(".tab-content");
+
+            tabs.forEach(function (tab, index) {
+                tab.addEventListener("click", function () {
+                    tabs.forEach(function (tab) {
+                        tab.classList.remove("active");
+                    });
+                    contents.forEach(function (content) {
+                        content.classList.remove("active");
+                    });
+                    tabs[index].classList.add("active");
+                    contents[index].classList.add("active");
+                });
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology and Information Officer</p>
+            <p>Chief Technology Officer</p>
         </div>
         <nav>
             <ul>
@@ -123,9 +181,52 @@
                 <li><a href="#blog3">The Role of AI and ML in Modernizing Legacy Systems</a></li>
             </ol>
 
-            <!-- Blog 4 -->
-            <div id="blog4" class="section">
-                <h3>1. Evolution for Enterprises from AI to GenAI</h3>
+            <div class="tab-container">
+                <div class="tab active">1</div>
+                <div class="tab">2</div>
+                <div class="tab">3</div>
+                <div class="tab">4</div>
+            </div>
+            <div id="blog1" class="tab-content active">
+                <h3>1. Key Trends in Technology Transformation</h3>
+                <p>As technology continues to evolve at a rapid pace, staying ahead of the curve is crucial for businesses. Here are some of the key trends driving technology transformation in 2024:</p>
+                <ul>
+                    <li><strong>Artificial Intelligence and Machine Learning:</strong> AI and ML are at the forefront of technology transformation. Businesses are leveraging these technologies to automate processes, gain insights from data, and enhance decision-making.</li>
+                    <li><strong>Cloud Computing:</strong> Cloud adoption continues to rise as organizations seek scalable and cost-effective solutions for their IT infrastructure. The shift to cloud is enabling greater flexibility and innovation.</li>
+                    <li><strong>Cybersecurity:</strong> With the increasing number of cyber threats, cybersecurity is a top priority. Companies are investing in advanced security measures to protect their data and systems.</li>
+                    <li><strong>IoT and Edge Computing:</strong> The Internet of Things (IoT) and edge computing are transforming industries by enabling real-time data processing and improving operational efficiency.</li>
+                    <li><strong>Blockchain Technology:</strong> Blockchain is gaining traction beyond cryptocurrencies. It's being used for secure transactions, supply chain transparency, and decentralized applications.</li>
+                </ul>
+                <div class="back-to-top"><a href="#blog">Back to top</a></div>
+            </div>
+
+            <div id="blog2" class="tab-content">
+                <h3>2. Optimizing Technology Spend: Strategies for Success</h3>
+                <p>Optimizing technology spend is essential for maximizing ROI and ensuring sustainable growth. Here are some effective strategies for managing technology investments:</p>
+                <ul>
+                    <li><strong>Conduct a Technology Audit:</strong> Regularly review your technology stack to identify redundant or underutilized assets. This helps in reallocating resources to more critical areas.</li>
+                    <li><strong>Prioritize Investments:</strong> Focus on technology investments that align with your business goals and deliver the highest value. Prioritizing investments ensures that resources are allocated efficiently.</li>
+                    <li><strong>Leverage Cloud Solutions:</strong> Cloud computing offers scalability and cost savings. By moving to the cloud, you can reduce hardware costs and pay only for the resources you use.</li>
+                    <li><strong>Implement Automation:</strong> Automation can significantly reduce operational costs. Invest in automation tools to streamline processes and improve efficiency.</li>
+                </ul>
+                <div class="back-to-top"><a href="#blog">Back to top</a></div>
+            </div>
+
+            <div id="blog3" class="tab-content">
+                <h3>3. The Role of AI and ML in Modernizing Legacy Systems</h3>
+                <p>Artificial intelligence (AI) and machine learning (ML) are powerful tools for modernizing legacy systems. Here are some ways these technologies can enhance efficiency and drive innovation:</p>
+                <ul>
+                    <li><strong>Predictive Maintenance:</strong> AI and ML can analyze data from legacy systems to predict maintenance needs, reducing downtime and extending the lifespan of equipment.</li>
+                    <li><strong>Process Automation:</strong> Automating repetitive tasks with AI and ML can improve efficiency and reduce the risk of human error. This frees up employees to focus on more strategic activities.</li>
+                    <li><strong>Enhanced Data Analytics:</strong> Legacy systems often hold vast amounts of data. AI and ML can unlock insights from this data, enabling better decision-making and identifying new business opportunities.</li>
+                    <li><strong>Improved Customer Experience:</strong> AI-powered chatbots and virtual assistants can provide instant support to customers, improving satisfaction and reducing the workload on customer service teams.</li>
+                    <li><strong>Security Enhancements:</strong> AI and ML can detect and respond to security threats in real-time, providing an additional layer of protection for legacy systems.</li>
+                </ul>
+                <div class="back-to-top"><a href="#blog">Back to top</a></div>
+            </div>
+
+            <div id="blog4" class="tab-content">
+                <h3>4. The Evolution from AI to GenAI</h3>
                 <p><strong>Artificial Intelligence (AI):</strong></p>
                 <p>AI encompasses a broad range of technologies that enable machines to mimic human intelligence. Traditional AI includes machine learning (ML) models that are trained to perform specific tasks such as image recognition, natural language processing (NLP), and predictive analytics. AI models improve over time through data exposure, learning patterns, and making data-driven decisions.</p>
         
@@ -181,59 +282,7 @@
         
                 <h4>Conclusion</h4>
                 <p>The transition from AI to GenAI represents a significant leap forward in the capabilities of intelligent systems. By understanding the differences, strategically adopting GenAI, and leveraging open-source technologies, companies can harness the power of GenAI to drive innovation and achieve their business objectives.</p>
-                <div class="back-to-top">
-                    <a href="#blog">Back to Top</a>
-                </div>
-            </div>
-
-            <!-- Blog 1 -->
-            <div id="blog1" class="section">
-                <h3>2. Key Trends in Technology Transformation</h3>
-                <p>As technology continues to evolve at a rapid pace, staying ahead of the curve is crucial for businesses. Here are some of the key trends driving technology transformation in 2024:</p>
-                <ul>
-                    <li><strong>Artificial Intelligence and Machine Learning:</strong> AI and ML are at the forefront of technology transformation. Businesses are leveraging these technologies to automate processes, gain insights from data, and enhance decision-making.</li>
-                    <li><strong>Cloud Computing:</strong> Cloud adoption continues to rise as organizations seek scalable and cost-effective solutions for their IT infrastructure. The shift to cloud is enabling greater flexibility and innovation.</li>
-                    <li><strong>Cybersecurity:</strong> With the increasing number of cyber threats, cybersecurity is a top priority. Companies are investing in advanced security measures to protect their data and systems.</li>
-                    <li><strong>IoT and Edge Computing:</strong> The Internet of Things (IoT) and edge computing are transforming industries by enabling real-time data processing and improving operational efficiency.</li>
-                    <li><strong>Blockchain Technology:</strong> Blockchain is gaining traction beyond cryptocurrencies. It's being used for secure transactions, supply chain transparency, and decentralized applications.</li>
-                </ul>
-                <p>Staying informed about these trends and incorporating them into your technology strategy can help your business remain competitive and innovative.</p>
-                <div class="back-to-top">
-                    <a href="#blog">Back to Top</a>
-                </div>
-            </div>
-
-            <!-- Blog 2 -->
-            <div id="blog2" class="section">
-                <h3>3. Optimizing Technology Spend: Strategies for Success</h3>
-                <p>Optimizing technology spend is essential for maximizing ROI and ensuring sustainable growth. Here are some effective strategies for managing technology investments:</p>
-                <ul>
-                    <li><strong>Conduct a Technology Audit:</strong> Regularly review your technology stack to identify redundant or underutilized assets. This helps in reallocating resources to more critical areas.</li>
-                    <li><strong>Prioritize Investments:</strong> Focus on technology investments that align with your business goals and deliver the highest value. Prioritizing investments ensures that resources are allocated efficiently.</li>
-                    <li><strong>Leverage Cloud Solutions:</strong> Cloud computing offers scalability and cost savings. By moving to the cloud, you can reduce hardware costs and pay only for the resources you use.</li>
-                    <li><strong>Implement Automation:</strong> Automation can significantly reduce operational costs. Invest in automation tools to streamline processes and improve efficiency.</li>
-                </ul>
-                <p>By implementing these strategies, businesses can optimize their technology spend, enhance operational efficiency, and drive sustainable growth.</p>
-                <div class="back-to-top">
-                    <a href="#blog">Back to Top</a>
-                </div>
-            </div>
-
-            <!-- Blog 3 -->
-            <div id="blog3" class="section">
-                <h3>4. The Role of AI and ML in Modernizing Legacy Systems</h3>
-                <p>Artificial intelligence (AI) and machine learning (ML) are powerful tools for modernizing legacy systems. Here are some ways these technologies can enhance efficiency and drive innovation:</p>
-                <ul>
-                    <li><strong>Predictive Maintenance:</strong> AI and ML can analyze data from legacy systems to predict maintenance needs, reducing downtime and extending the lifespan of equipment.</li>
-                    <li><strong>Process Automation:</strong> Automating repetitive tasks with AI and ML can improve efficiency and reduce the risk of human error. This frees up employees to focus on more strategic activities.</li>
-                    <li><strong>Enhanced Data Analytics:</strong> Legacy systems often hold vast amounts of data. AI and ML can unlock insights from this data, enabling better decision-making and identifying new business opportunities.</li>
-                    <li><strong>Improved Customer Experience:</strong> AI-powered chatbots and virtual assistants can provide instant support to customers, improving satisfaction and reducing the workload on customer service teams.</li>
-                    <li><strong>Security Enhancements:</strong> AI and ML can detect and respond to security threats in real-time, providing an additional layer of protection for legacy systems.</li>
-                </ul>
-                <p>By integrating AI and ML into legacy systems, businesses can drive innovation, improve efficiency, and stay competitive in a rapidly changing technological landscape.</p>
-                <div class="back-to-top">
-                    <a href="#blog">Back to Top</a>
-                </div>
+                <div class="back-to-top"><a href="#blog">Back to top</a></div>
             </div>
         </section>
     </div>
