--- a/projects.html
+++ b/projects.html
@@ -148,14 +148,6 @@
         <section id="projects" class="section">
             <h2>Products, Platforms & Solutions, and Client Projects</h2>
             <p>Throughout my career, I have led numerous large-scale technology transformation projects on products and client implementations, delivering significant business value and technological advancements. Here are some key products, platforms and solutions which were transformed and/or launched by me and my team, successfully imlpemented at clients as business process transformations:</p>
-            <h3>Financial Services</h3>
-            <ul>
-                <li><strong>Auto Loan Servicing:</strong> Developed a comprehensive auto loan servicing platform, improving loan processing times and customer satisfaction.</li>
-                <li><strong>Mortgage Services:</strong> Implemented end-to-end mortgage processing solutions, enhancing operational efficiency and compliance.</li>
-                <li><strong>Lockbox Services:</strong> Streamlined lockbox processing for faster and more accurate financial transactions.</li>
-                <li><strong>Call Center Solutions:</strong> Introduced AI-powered call center analytics to optimize customer service operations.</li>
-                <li><strong>Payments and Insurance Claims:</strong> Innovated payment processing and claims adjudication systems, reducing processing times and increasing accuracy.</li>
-            </ul>
             <h3>Health Care Solutions</h3>
             <ul>
                 <li><strong>Medicaid & Commercial Claims:</strong> Modernized claims processing systems, enhancing efficiency and reducing costs.</li>
@@ -164,7 +156,15 @@
                 <li><strong>Provider Care Management:</strong> Enhanced care management systems to support better patient care coordination.</li>
                 <li><strong>Payment Integrity Services:</strong> Improved payment integrity and subrogation processes through automation and analytics.</li>
             </ul>
-            <h3>Transportation</h3>
+            <h3>Financial Services</h3>
+            <ul>
+                <li><strong>Auto Loan Servicing:</strong> Developed a comprehensive auto loan servicing platform, improving loan processing times and customer satisfaction.</li>
+                <li><strong>Mortgage Services:</strong> Implemented end-to-end mortgage processing solutions, enhancing operational efficiency and compliance.</li>
+                <li><strong>Lockbox Services:</strong> Streamlined lockbox processing for faster and more accurate financial transactions.</li>
+                <li><strong>Call Center Solutions:</strong> Introduced AI-powered call center analytics to optimize customer service operations.</li>
+                <li><strong>Payments and Insurance Claims:</strong> Innovated payment processing and claims adjudication systems, reducing processing times and increasing accuracy.</li>
+            </ul>
+            <h3>Transportation - Tolling, Transit, Public Safety and Curbside Parking</h3>
             <ul>
                 <li><strong>Road Usage Charging / Tolling:</strong> Developed and implemented advanced tolling solutions using IoT and AI technologies.</li>
                 <li><strong>Transit Fare Collection:</strong> Introduced automated fare collection systems to streamline public transportation.</li>
