--- a/blog.html
+++ b/blog.html
@@ -184,17 +184,17 @@
         <section id="blog" class="section">
             <h2>Blog</h2>
             <ol>
-                <li><a href="#blog1">Key Trends in Technology Transformation</a></li>
-                <li><a href="#blog2">Optimizing Technology Spend: Strategies for Success</a></li>
-                <li><a href="#blog3">The Role of AI and ML in Modernizing Legacy Systems</a></li>
-                <li><a href="#blog4">Evolution for Enterprises from AI to GenAI</a></li>
+                <li><a href="#tab-1">Key Trends in Technology Transformation</a></li>
+                <li><a href="#tab-2">Optimizing Technology Spend: Strategies for Success</a></li>
+                <li><a href="#tab-3">The Role of AI and ML in Modernizing Legacy Systems</a></li>
+                <li><a href="#tab-4">Evolution for Enterprises from AI to GenAI</a></li>
             </ol>
 
             <div class="tab-container">
-                <div class="tab active" data-tab="1">1</div>
-                <div class="tab" data-tab="2">2</div>
-                <div class="tab" data-tab="3">3</div>
-                <div class="tab" data-tab="4">4</div>
+                <div class="tab active" data-tab="1">Technology Transformation</div>
+                <div class="tab" data-tab="2">Technology Spend Optimization</div>
+                <div class="tab" data-tab="3">AI and ML in Legacy Systems</div>
+                <div class="tab" data-tab="4">Evolution to GenAI</div>
             </div>
             <div id="tab-1" class="tab-content active">
                 <h3>1. Key Trends in Technology Transformation</h3>
