--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Projects</title>
-    <meta name="description" content="Projects led by Rahul Gupta, including technology modernization and AI/ML integration.">
+    <meta name="description" content="Products, Platforms, Client Projects led by Rahul Gupta, including technology modernization and AI/ML integration.">
     <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent">
     <meta name="author" content="Rahul Gupta">
     <style>
@@ -146,7 +146,7 @@
 
     <div class="container">
         <section id="projects" class="section">
-            <h2>Products, Platforms & Solutions, and Client Projects</h2>
+            <h2>Products, Solutions and Client Projects</h2>
             <p>Throughout my career, I have led numerous large-scale technology transformation projects on products and client implementations, delivering significant business value and technological advancements. Here are some key products, platforms and solutions which were transformed and/or launched by me and my team, successfully imlpemented at clients as business process transformations:</p>
             <h3>Health Care Solutions</h3>
             <ul>
