--- a/blog.html
+++ b/blog.html
@@ -191,13 +191,13 @@
             </ol>
 
             <div class="tab-container">
-                <div class="tab active" data-tab="1">Technology Transformation</div>
+                <div class="tab" data-tab="1">Technology Transformation</div>
                 <div class="tab" data-tab="2">Technology Spend Optimization</div>
                 <div class="tab" data-tab="3">AI and ML in Legacy Systems</div>
                 <div class="tab" data-tab="4">Evolution to GenAI</div>
             </div>
-            <div id="tab-1" class="tab-content active">
-                <h3>1. Key Trends in Technology Transformation</h3>
+            <div id="tab-1" class="tab-content">
+                <h3>Key Trends in Technology Transformation</h3>
                 <p>As technology continues to evolve at a rapid pace, staying ahead of the curve is crucial for businesses. Here are some of the key trends driving technology transformation in 2024:</p>
                 <ul>
                     <li><strong>Artificial Intelligence and Machine Learning:</strong> AI and ML are at the forefront of technology transformation. Businesses are leveraging these technologies to automate processes, gain insights from data, and enhance decision-making.</li>
@@ -210,7 +210,7 @@
             </div>
 
             <div id="tab-2" class="tab-content">
-                <h3>2. Optimizing Technology Spend: Strategies for Success</h3>
+                <h3>Optimizing Technology Spend: Strategies for Success</h3>
                 <p>Optimizing technology spend is essential for maximizing ROI and ensuring sustainable growth. Here are some effective strategies for managing technology investments:</p>
                 <ul>
                     <li><strong>Conduct a Technology Audit:</strong> Regularly review your technology stack to identify redundant or underutilized assets. This helps in reallocating resources to more critical areas.</li>
@@ -222,7 +222,7 @@
             </div>
 
             <div id="tab-3" class="tab-content">
-                <h3>3. The Role of AI and ML in Modernizing Legacy Systems</h3>
+                <h3>The Role of AI and ML in Modernizing Legacy Systems</h3>
                 <p>Artificial intelligence (AI) and machine learning (ML) are powerful tools for modernizing legacy systems. Here are some ways these technologies can enhance efficiency and drive innovation:</p>
                 <ul>
                     <li><strong>Predictive Maintenance:</strong> AI and ML can analyze data from legacy systems to predict maintenance needs, reducing downtime and extending the lifespan of equipment.</li>
@@ -235,7 +235,7 @@
             </div>
 
             <div id="tab-4" class="tab-content">
-                <h3>4. Evolution for Enterprises from AI to GenAI</h3>
+                <h3>Evolution for Enterprises from AI to GenAI</h3>
                 <p><strong>Artificial Intelligence (AI):</strong></p>
                 <p>AI encompasses a broad range of technologies that enable machines to mimic human intelligence. Traditional AI includes machine learning (ML) models that are trained to perform specific tasks such as image recognition, natural language processing (NLP), and predictive analytics. AI models improve over time through data exposure, learning patterns, and making data-driven decisions.</p>
         
