--- a/achievements.html
+++ b/achievements.html
@@ -133,7 +133,7 @@
     <div class="container">
         <section id="achievements" class="section">
             <h2>Achievements</h2>
-            <p>My career is marked by significant achievements in technology leadership, product innovation, and business transformation. Here are some highlights:</p>
+            <p>My career achievements are in technology leadership, product innovation, business transformation, client & market impact and most importantly building strong & motivated teams & stakeholder management. Here are some highlights:</p>
 
             <h3>Business and Technology Impact</h3>
             <ul>
