--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
         }
 
         .tabs input[type="radio"]:checked+label+.tab-content {
-            display: block;
+            display: none;
         }
 
         .back-to-top a {
@@ -140,7 +140,7 @@
         <section id="blog" class="section">
             <h2>Blog</h2>
             <div class="tabs">
-                <input type="radio" name="tabs" id="tab1" checked>
+                <input type="radio" name="tabs" id="tab1">
                 <label for="tab1">1. Technology Transformation in the Modern Age</label>
                 <div id="tab-1" class="tab-content">
                     <h3>Technology Transformation in the Modern Age</h3>
